supporting responsive design

--- a/src/modules/layout/_footer.html
+++ b/src/modules/layout/_footer.html
@@ -32,6 +32,6 @@
     <div class="footer-bottom-nav">
         <small>&copy;Natively Ltd.</small>
         <a href="">Terms and conditions</a>
-        <a href="">Privacy Policy</a>
+        <a href=""> / Privacy Policy</a>
     </div>
 </div>
