--- a/src/pages/assets/styles/_const.scss
+++ b/src/pages/assets/styles/_const.scss
@@ -11,3 +11,6 @@ $color-img-bg: #C5DDDD;
 $color-gray: #ededed;
 $color-black: #030304;
 $color-light-gray: #D7D7D7;
+
+$bp-lg: 1280px;
+$bp-sm: 600px;
