--- a/src/pages/assets/styles/components/_link.scss
+++ b/src/pages/assets/styles/components/_link.scss
@@ -19,3 +19,9 @@
         background: cn.$color-accent-light;
     }
 }
+
+@media screen and (max-width: cn.$bp-sm) {
+    .link-contact {
+        width: 250px;
+    }
+}
