--- a/src/pages/assets/styles/components/_showcase.scss
+++ b/src/pages/assets/styles/components/_showcase.scss
@@ -41,3 +41,15 @@
 .showcase-name {
     font-size: 17px;
 }
+
+@media screen and (max-width: cn.$bp-sm) {
+    .showcase-list {
+        max-height: 400px;
+    }
+    .showcase-card {
+        & > img {
+            height: 250px;
+            width: auto;
+        }
+    }
+}
