--- a/src/pages/assets/styles/components/_course.scss
+++ b/src/pages/assets/styles/components/_course.scss
@@ -19,7 +19,7 @@
 }
 .course-item {
     width: 30%;
-    height: 200px;
+    min-height: 230px;
     display: flex;
     align-items: center;
     padding: 20px;
@@ -52,5 +52,16 @@
     &:hover {
         background: #fff;
         color: cn.$color-core;
+    }
+}
+
+@media screen and (max-width: cn.$bp-sm) {
+    .course-list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .course-item {
+        width: 80%;
     }
 }
