--- a/src/pages/assets/styles/components/_point.scss
+++ b/src/pages/assets/styles/components/_point.scss
@@ -14,3 +14,11 @@
     gap: 20px;
     justify-content: center;
 }
+
+@media screen and (max-width: cn.$bp-sm) {
+    .point-list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
