Adding dynamic features and pages

--- a/src/modules/components/_course.html
+++ b/src/modules/components/_course.html
@@ -1,4 +1,4 @@
-<section class="course">
+<section class="course" id="course">
     <%- include("../modules/components/_headline.html", {
         modifier: "headline headline-course",
         main: "COURSE",
@@ -28,6 +28,6 @@
     </div>
 
     <div class="course-footer">
-        <a href="" class="link-footer">Fee・Course comparison</a>
+        <a href="/comparison.html" class="link-footer">Fee・Course comparison</a>
     </div>
 </section>
