--- a/src/modules/components/_hero.html
+++ b/src/modules/components/_hero.html
@@ -1,10 +1,20 @@
-<div class="hero">
+<section class="hero">
     <div class="hero-headline">
         <span class="hero-main">Enhance your English skills while having fun!</span>
         <br>
         <div class="hero-sub">
             <span>Talk to 8 billion people around the world!</span>
-            <a href="../modules/componens/description.html" class="details">Details</a>
+            <button class="toggle">Details</button>
+        </div>
+        <div class="desc">
+            <div class="details">
+                <img src="https://wordsrated.com/wp-content/uploads/2023/12/Number-of-English-speakers-over-time-billions-2048x1268.png" width="550px" height="auto" alt="graph showing the global population of English speakers">
+                <span>The population of English speakers in the world</span>
+                <p>
+                    Did you know that there are 1.46 billion English speakers worldwide?<br>
+                    English is one of the most widely spoken languages on the planet, connecting people across cultures, countries, and industries.
+                </p>
+            </div>
         </div>
     </div>
 
@@ -22,4 +32,4 @@
             <% } %>
         </div>
     </div>
-</div>
+</section>
