--- a/src/modules/components/_point.html
+++ b/src/modules/components/_point.html
@@ -6,55 +6,49 @@
     }) %>
 
     <ul class="point-list">
-        <li>
-            <article class="card">
-                <div class="card-headline">
-                    Professional teaching
-                </div>
-                <div class="card-image">
-                    <img src="https://img.freepik.com/free-vector/hand-drawn-business-communication-concept_23-2149171107.jpg" height="214" alt="image of a man climbing the stairs">
-                </div>
-                <div class="card-desc">
-                    <p>
-                        Our teachers are native English speakers with respected academic backgrounds.
-                        They hold globally recognised qualifications such as TEFL, TESOL, and CELTA.
-                        Learn with professionals who understand both language and learners.
-                    </p>
-                </div>
-            </article>
+        <li class="card">
+            <div class="card-headline">
+                Professional teaching
+            </div>
+            <div class="card-image">
+                <img src="https://img.freepik.com/free-vector/hand-drawn-business-communication-concept_23-2149171107.jpg" alt="image of a man climbing the stairs">
+            </div>
+            <div class="card-desc">
+                <p>
+                    Our teachers are native English speakers with respected academic backgrounds.
+                    They hold globally recognised qualifications such as TEFL, TESOL, and CELTA.
+                    Learn with professionals who understand both language and learners.
+                </p>
+            </div>
         </li>
-        <li>
-            <article class="card">
-                <div class="card-headline">
-                    Smarter learning with AI.
-                </div>
-                <div class="card-image">
-                    <img src="https://assets.inman.com/wp-content/uploads/2023/07/Chime_ChatGPT_integration-1024x576.png" height="214" alt="image of AI">
-                </div>
-                <div class="card-desc">
-                    <p>
-                        We integrate AI into our learning materials to enhance efficiency and clarity.
-                        Personalised feedback helps you focus on what truly matters.
-                        Study smarter, not harder.
-                    </p>
-            </article>
+        <li class="card">
+            <div class="card-headline">
+                Smarter learning with AI.
+            </div>
+            <div class="card-image">
+                <img src="https://assets.inman.com/wp-content/uploads/2023/07/Chime_ChatGPT_integration-1024x576.png" alt="image of AI">
+            </div>
+            <div class="card-desc">
+                <p>
+                    We integrate AI into our learning materials to enhance efficiency and clarity.
+                    Personalised feedback helps you focus on what truly matters.
+                    Study smarter, not harder.
+                </p>
         </li>
-        <li>
-            <article class="card">
-                <div class="card-headline">
-                    Motivational environment
-                </div>
-                <div class="card-image">
-                    <img src="https://media.istockphoto.com/id/1299120940/vector/motivation-and-inspiration-concept.jpg?s=612x612&w=0&k=20&c=Am_EDaEtRmV6Wzw4l7RaxWN-gNcFCMLNVCwVjibGNxc=" height="214" alt="image of woman climbing the stairs">
-                </div>
-                <div class="card-desc">
-                    <p>
-                        Learning thrives in a supportive and inspiring space.
-                        Stay motivated through clear goals and visible progress.
-                        Build confidence as you grow, step by step.
-                    </p>
-                </div>
-            </article>
+        <li class="card">
+            <div class="card-headline">
+                Motivational environment
+            </div>
+            <div class="card-image">
+                <img src="https://media.istockphoto.com/id/1299120940/vector/motivation-and-inspiration-concept.jpg?s=612x612&w=0&k=20&c=Am_EDaEtRmV6Wzw4l7RaxWN-gNcFCMLNVCwVjibGNxc=" alt="image of woman climbing the stairs">
+            </div>
+            <div class="card-desc">
+                <p>
+                    Learning thrives in a supportive and inspiring space.
+                    Stay motivated through clear goals and visible progress.
+                    Build confidence as you grow, step by step.
+                </p>
+            </div>
         </li>
     </ul>
 </section>
