--- a/src/modules/layout/_footer.html
+++ b/src/modules/layout/_footer.html
@@ -9,10 +9,9 @@
             </address>
         </div>
         <div class="footer-top-nav">
-            <a href="">Home</a>
-            <a href="">About course</a>
-            <a href="">Blog</a>
-            <a href="">Company site</a>
+            <a href="#header">Home</a>
+            <a href="#course">About course</a>
+            <a href="/blog.html">Blog(Coming soon)</a>
         </div>
         <div class="footer-top-others">
             <a href="" target="_blank">
