--- a/src/pages/assets/styles/main.scss
+++ b/src/pages/assets/styles/main.scss
@@ -17,3 +17,8 @@
 @use "components/point";
 @use "components/course";
 @use "components/showcase";
+@use "components/form";
+@use "components/confirm";
+@use "components/thanks";
+@use "components/comparison";
+@use "components/blog";
