--- a/src/modules/components/_contact.html
+++ b/src/modules/components/_contact.html
@@ -3,7 +3,7 @@
         <h1>Interested?</h1>
         <%- include("../modules/components/_link.html", {
             modifier: "link-contact",
-            href: "",
+            href: "/form.html",
             text: "CONTACT"
         }) %>
     </div>
