--- a/src/modules/layout/_header.html
+++ b/src/modules/layout/_header.html
@@ -1,4 +1,4 @@
-<header class="header-inner">
+<section class="header-inner" id="header">
     <div class="header-inner">
         <div class="header-flex">
             <a href="/" class="header-logo">
@@ -12,16 +12,16 @@
                             <a href="/" class="nav-link">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a href="/" class="nav-link">COURSES</a>
+                            <a href="#course" class="nav-link">COURSES</a>
                         </li>
                         <li class="nav-item">
-                            <a href="/" class="nav-link">BLOG</a>
+                            <a href="/blog.html" class="nav-link">BLOG</a>
                         </li>
                     </ul>
                     <div class="nav-contact">
                         <%- include('../modules/components/_link.html', {
                             modifier: "",
-                            href: "",
+                            href: "/form.html",
                             text: "CONTACT",
                         }) %>
                     </div>
@@ -29,4 +29,4 @@
             </nav>
         </div>
     </div>
-</header>
+</section>
