--- a/src/pages/assets/styles/_const.scss
+++ b/src/pages/assets/styles/_const.scss
@@ -6,10 +6,11 @@ $color-accent: #ff6d04;
 $color-accent-light: #e77422;
 $color-base: #e9e9e9;
 $color-strong: #3058f7;
+$color-lightblue: #5678ff;
 $color-stream: #313948;
 $color-img-bg: #C5DDDD;
 $color-gray: #ededed;
-$color-black: #030304;
+$color-dark-gray: #c2c2c2;
 $color-light-gray: #D7D7D7;
 
 $bp-lg: 1280px;
