--- a/src/pages/assets/styles/components/_card.scss
+++ b/src/pages/assets/styles/components/_card.scss
@@ -1,16 +1,17 @@
 @use "../const" as cn;
 
 .card {
-    width: 380px;
-    height: 410px;
-    padding: 20px;
+    width: 100%;
+    min-width: 0;
+    padding: 40px 20px 20px;
     background: white;
     border-radius: 8px;
+    box-sizing: border-box;
 }
 .card-headline {
-    font-size: 22px;
-    margin: 15px;
-    white-space: nowrap;
+    height: 70px;
+    margin: 30px 0;
+    font-size: 18px;
     position: relative;
     &::before {
         content: "";
@@ -25,9 +26,11 @@
 }
 .card-image {
     width: 100%;
+    aspect-ratio: 16 / 9;
     padding: 0;
     & > img {
         width: 100%;
+        height: 100%;
         border: 4px solid cn.$color-gray;
     }
 }
