--- a/src/pages/assets/styles/components/_contact.scss
+++ b/src/pages/assets/styles/components/_contact.scss
@@ -7,11 +7,14 @@
     justify-content: center;
 }
 .contact-inner {
-    width: 800px;
+    max-width: 800px;
     height: 130px;
     padding: 20px;
     background: #fff;
     border-radius: 8px;
+    & > h1 {
+        color: cn.$color-stream;
+    }
 }
 
 @media screen and (max-width: cn.$bp-sm) {
