--- a/src/pages/assets/styles/components/_course.scss
+++ b/src/pages/assets/styles/components/_course.scss
@@ -12,6 +12,7 @@
 }
 .course-list {
     width: 100%;
+    min-width: 0;
     display: flex;
     justify-content: center;
     margin-top: 30px;
@@ -19,10 +20,11 @@
 }
 .course-item {
     width: 30%;
+    min-width: 0;
     min-height: 230px;
     display: flex;
     align-items: center;
-    padding: 20px;
+    padding: 10px;
     border: 2px solid cn.$color-stream;
     text-align: center;
     transition: background .2s ease-in-out, transform .2s ease-in-out;
