--- a/src/pages/assets/styles/components/_link.scss
+++ b/src/pages/assets/styles/components/_link.scss
@@ -19,6 +19,25 @@
         background: cn.$color-accent-light;
     }
 }
+.link-free-trial {
+    display: inline-block;
+    margin-top: 50px;
+    width: 450px;
+    background: cn.$color-accent;
+    padding: 15px 0;
+    text-align: center;
+    border-radius: 4px;
+    transition: transform .2s ease-in-out, background .2s ease-in-out;
+    & > span {
+        color: #fff;
+        font-weight: bold;
+        font-size: 15px;
+    }
+    &:hover {
+        transform: translateY(-4px);
+        background: cn.$color-accent-light;
+    }
+}
 
 @media screen and (max-width: cn.$bp-sm) {
     .link-contact {
