--- a/src/pages/assets/styles/components/_point.scss
+++ b/src/pages/assets/styles/components/_point.scss
@@ -5,13 +5,13 @@
     text-align: center;
     font-weight: bold;
     color: cn.$color-sub;
-    margin-bottom: 50px;
+    margin-bottom: 150px;
 }
 .point-list {
-    width: 100%;
-    margin: 30px 0 100px;
+    margin-top: 40px;
+    padding: 0 30px;
     display: flex;
-    gap: 20px;
+    gap: 30px;
     justify-content: center;
 }
 
